--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     <main>
       <section id="home" class="homeSection">
         <!-- Hjem -->
+        <!-- Inspo fra a2g_undervisning9 -->
+        <div class="homeText">
+          <h1>Velkommen til min side</h1>
+          <p>Jeg heter Julie og har lært web-utvikling med HTML, CSS og JS gjennom JobLoop.</p>
+        </div>
+        <img class="homeImg" src="images/julieCartoon.png" alt="En tegnet illustrasjon av Julie med krøllet brunt hår, runde briller og rød langhalset genser.">
       </section>
+
       <section id="about" class="aboutSection">
         <!-- Om meg -->
       </section>
